finish login part
