# router/app.go
@@ -20,6 +20,7 @@ func Router() *gin.Engine {
 	r.GET("/user/CreateUser", service.CreateUser)
 	r.GET("/user/DeleteUser", service.DeleteUser)
 	r.POST("/user/UpdateUser", service.UpdateUser)
+	r.POST("/user/FindUserByNameAndPwd", service.FindUserByNameAndPwd)
 
 	return r
 }
